examples/canary-project/src/bad/consumer-a.ts
import { hub } from './hub.js'
export const consumer_a = (): string => hub()
